--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 server:
   error:
     include-stacktrace: ON_PARAM
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:9090/anime?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
